--- a/en_GB.lang
+++ b/en_GB.lang
@@ -4,3 +4,6 @@ logger.info.discord.init=Discord client has been created.
 logger.info.discord.client.init=Logged in as {client.user}.
 
 discord.command.prefix=!pirate
+
+pirate.help.message=This is a sample help message that will be displayed to the user
+
