--- a/en_GB.lang
+++ b/en_GB.lang
@@ -1,11 +1,20 @@
-logger.info.lang.init=Language container has need initialised.
-logger.info.env.init=Environment variables have been initialised.
+logger.info.logger.init={} logger has been initialised
+logger.info.lang.init={} language container has beed initialised.
+logger.info.env.init={} environment variables have been initialised.
 logger.info.discord.init=Discord client has been created.
 logger.info.discord.client.init=Logged in as {client.user}.
 
-discord.command.prefix=!pirate
+logger.command.help={} asked for help
+logging.command.dev.generate_board={} requested a random board
 
-pirate.help.message=This is a sample help message that will be displayed to the user
+discord.command.prefix=!pirate
+discord.command.dev.prefix=dev
+discord.command.dev.generate_board=generate_board
+discord.command.help=help
+discord.command.start=start
+
+
+pirate.message.help=This is a sample help message that will be displayed to the user
 
 pirate.grid.order="rob","kill","present","nuke","swap","choose","shield","mirror","bomb","double","bank","5K","3K","1K","200"
 pirate.grid.format=:black_large_square::regional_indicator_a::regional_indicator_b::regional_indicator_c::regional_indicator_d::regional_indicator_e::regional_indicator_f::regional_indicator_g:\n:one:{}\n:two:{}\n:three:{}\n:four:{}\n:five:{}\n:six:{}\n:seven:{}
