--- a/en_GB.lang
+++ b/en_GB.lang
@@ -1,21 +1,32 @@
-logger.info.logger.init={} logger has been initialised
-logger.info.lang.init={} language container has beed initialised.
-logger.info.env.init={} environment variables have been initialised.
+ # logger messages for initialisation of different modules
+logger.info.logger.init={name} logger has been initialised
+logger.info.lang.init={name} language container has beed initialised.
+logger.info.env.init={name} environment variables have been initialised.
 logger.info.discord.init=Discord client has been created.
 logger.info.discord.client.init=Logged in as {client.user}.
 
-logger.command.help={} asked for help
-logging.command.dev.generate_board={} requested a random board
+ # logger error messages
+logger.error.unknown=An unknown error occurred
+logger.error.unsupported_channel=Channels of type {ch_type)} are not yet supported.
 
+ # logger messages regarding the game
+logger.info.game.start={author} started a new game
+
+# logger messages for commands being run
+logger.command.help={user} asked for help
+logger.command.dev.generate_board={user} requested a random board
+
+ # command syntax
 discord.command.prefix=!pirate
 discord.command.dev.prefix=dev
 discord.command.dev.generate_board=generate_board
 discord.command.help=help
 discord.command.start=start
 
-
+ # message templates that are sent to the user
 pirate.message.help=This is a sample help message that will be displayed to the user
 
+ # controls for how the grid is displayed
 pirate.grid.order="rob","kill","present","nuke","swap","choose","shield","mirror","bomb","double","bank","5K","3K","1K","200"
 pirate.grid.format=:black_large_square::regional_indicator_a::regional_indicator_b::regional_indicator_c::regional_indicator_d::regional_indicator_e::regional_indicator_f::regional_indicator_g:\n:one:{}\n:two:{}\n:three:{}\n:four:{}\n:five:{}\n:six:{}\n:seven:{}
 pirate.grid.key.none=:black_large_square:
